common-applications/test-environment/sync-bot/access/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/custom-http-errors: 400,500
    nginx.ingress.kubernetes.io/proxy-body-size: 2m
  name: access-ingress
  namespace: sync-bot
spec:
  tls:
    - hosts:
        - robot-gitee.test.osinfra.cn
      secretName: access-tls
  rules:
    - host: robot-gitee.test.osinfra.cn
      http:
        paths:
          - backend:
              serviceName: service-access
              servicePort: 8888
            path: /gitee-hook
